Fixing white space in "About Us" section

--- a/seawaterfox.com/main/css/style.css
+++ b/seawaterfox.com/main/css/style.css
@@ -1791,3 +1791,7 @@ left: 118px;
 		padding: 7px 0px;
 	}
 }
+
+#about {
+	background-color: #378587;
+}
